Fix eventos align

--- a/public/css/timeline.css
+++ b/public/css/timeline.css
@@ -53,6 +53,19 @@
     border-left-width: 0;
 }
 
+.circular {
+	width: 80px;
+	height: 80px;
+	background-position: 50%;
+    border-radius: 50%;
+    background-size: 100% auto;
+}
+
+.circular img {
+	opacity: 0;
+	filter: alpha(opacity=0);
+}
+
 .timeline>li .timeline-image {
     z-index: 100;
     position: absolute;
@@ -60,7 +73,6 @@
     width: 80px;
     height: 80px;
     margin-left: 0;
-    border: 7px solid #f1f1f1;
     border-radius: 100%;
     text-align: center;
     color: #fff;
@@ -134,6 +146,14 @@
         height: 100px;
         margin-left: -50px;
     }
+    
+    .circular {
+    	width: 100px;
+    	height: 100px;
+    	background-position: 50%;
+        border-radius: 50%;
+        background-size: 100% auto;
+    }
 
     .timeline>li .timeline-image h4 {
         margin-top: 16px;
@@ -154,13 +174,21 @@
     }
 
     .timeline>li .timeline-panel {
-        padding: 0 20px 20px;
+        padding: 0 40px 20px 20px;
     }
 
     .timeline>li .timeline-image {
         width: 150px;
         height: 150px;
         margin-left: -75px;
+    }
+    
+    .circular {
+    	width: 150px;
+    	height: 150px;
+	    background-position: 50%;
+        border-radius: 50%;
+        background-size: 100% auto;
     }
 
     .timeline>li .timeline-image h4 {
@@ -180,13 +208,21 @@
     }
 
     .timeline>li .timeline-panel {
-        padding: 0 20px 20px 100px;
+        padding: 0 40px 20px 100px;
     }
 
     .timeline>li .timeline-image {
         width: 170px;
         height: 170px;
         margin-left: -85px;
+    }
+    
+    .circular {
+    	width: 170px;
+    	height: 170px;
+    	background-position: 50%;
+        border-radius: 50%;
+        background-size: 100% auto;
     }
 
     .timeline>li .timeline-image h4 {
